# DebugSwift

./: .gitignore  .swiftformat  .swiftlint.yml  BUILD.bazel  CLAUDE.md  Dangerfile.swift  DebugSwift-XCFramework.podspec  DebugSwift.podspec  Example.xctestplan  Gemfile  GitVersion.yml  LICENSE  MODULE.bazel  Makefile  PR_DESCRIPTION.md  Package.swift  README.md  VERSIONING.md  WORKSPACE.bazel  replace_localized.py  test.sh  validate_podspec.sh
Example/: ApolloIntegrationExample.swift  BUILD.bazel  DEADLOCK_REPRODUCTION.md  Example-Info.plist  Gemfile  Podfile  switch_version.sh
Example/Example/: AppDelegate.swift  ContentView.swift  CustomAuthenticationExample.swift  DeadlockTestView.swift  DiskIOTestView.swift  Example-Info.plist  ExampleApp.swift  ExampleAppFixed.swift  GraphQLDemoView.swift  HangDemoView.swift  Info.plist  OSLogTestView.swift  SceneDelegate.swift  ThreadCheckerTestView.swift  ViewController.swift
Example/Example.xcodeproj/: project.pbxproj
Example/Example/Apollo/: ApolloTestView.swift  DebugSwiftApolloIntegration.swift
Example/Example/Base.lproj/: Main.storyboard
Example/Example/CoreData/: CoreDataExample.swift  ExampleModel.swift
Example/Example/DeepLink/: DeepLinkTestView.swift
Example/Example/FileUpload/: FileUploadView.swift
Example/Example/Helpers/: LeakViewController.swift  LocationManager.swift  PeiChartView.swift  RequestManager.swift
Example/Example/Hyperion/: HyperionSwiftDemoView.swift
Example/Example/LeakView/: LeakView.swift
Example/Example/MapView/: MapView.swift  MapView_13.swift
Example/Example/MockRequest/: MockRequest.swift
Example/Example/NetworkInjection/: NetworkInjectionExampleView.swift
Example/Example/SecurityAudit/: SecurityAuditTestView.swift
Example/Example/SwiftData/: SwiftDataExample.swift
Example/Example/ThreadChecker/: ThreadCheckerTestView.swift  ThreadCheckerUIKitTestView.swift
Example/Example/WebSocket/: WebSocketTestView.swift
Example/Example/WebView/: EncryptionExample.swift  NavigationTestView.swift  WebViewTestView.swift
Example/Tests/: Tests.swift
Example/fastlane/: Fastfile  README.md  report.xml
(+836 files in other folders)
